Codec_4/evosuite/fixing/evosuite-report-clz/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Codec_4_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/2/org/apache/commons/codec/binary/Base64_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/2/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/0/org/apache/commons/codec/binary/Base64_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/0/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java >> evosuite-report-clz/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/2/org/apache/commons/codec/binary/Base64_ESTest.java:18: error: duplicate class: org.apache.commons.codec.binary.Base64_ESTest
public class Base64_ESTest extends Base64_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/2/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java:18: error: duplicate class: org.apache.commons.codec.binary.Base64_ESTest_scaffolding
public class Base64_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/0/org/apache/commons/codec/binary/Base64_ESTest.java:19: error: duplicate class: org.apache.commons.codec.binary.Base64_ESTest
public class Base64_ESTest extends Base64_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/0/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java:18: error: duplicate class: org.apache.commons.codec.binary.Base64_ESTest_scaffolding
public class Base64_ESTest_scaffolding {
       ^
Note: /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors
